stamp positioning on mobile fixed

--- a/css/teji-new-design.css
+++ b/css/teji-new-design.css
@@ -159,7 +159,7 @@ body {
 .stamp {
   position: absolute;
   left: 135px;
-  top: 200px;
+  top: 140px;
   right: auto;
   bottom: auto;
   z-index: 2;
